[metadata]
name = invertpy
version = 1.0.0
author = Evripidis Gkanias
author_email = ev.gkanias@ed.ac.uk
description = Python package of computational models relevant to invertebrate processing, from the environment to
              sensor responses and to deeper neural responses in the invertebrate brain.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/evgkanias/InvertPy
licence = GPLv3+
classifiers =
    Programming Language :: Python :: 3
    Licence :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = invertpy
package_dir =
    invertpy = src/invertpy
python_requires = >=3.8