[metadata]
name = invertpy
version = 1.0.1
author = Evripidis Gkanias
author_email = ev.gkanias@ed.ac.uk
description = Python package of computational models relevant to invertebrate processing, from the environment to
              sensor responses and to deeper neural responses in the invertebrate brain.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/evgkanias/InvertPy
license = GPLv3+
classifiers =
    Programming Language :: Python :: 3
    Licence :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
     = src/
packages =
    invertpy
    invertpy.brain
    invertpy.sense
    invertpy.io
python_requires = >=3.8
install_requires = file: requirements.txt