[metadata]
name = invertpy
version = v1.0.0-alpha
author = Evripidis Gkanias
author_email = ev.gkanias@ed.ac.uk
description = Python package of computational models relevant to invertebrate processing, from the environment to
              sensor responses and to deeper neural responses in the invertebrate brain.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/InsectRobotics/InvertPy
license = GPLv3+
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Licence :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
     = src
packages =
    invertpy
    invertpy.brain
    invertpy.sense
    invertpy.io
python_requires = >=3.8
install_requires =
    setuptools>=40.8.0
    wheel
    numpy>=1.18.1
    scipy>=1.4.1
    scikit-learn>=0.23.2
    joblib>=1.0.1
project_urls =
    Bug Reports = https://github.com/InsectRobotics/InvertPy/issues
    Source = https://github.com/InsectRobotics/InvertPy